Added about paragraphs

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,18 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>This is bens stuff part 1.</p>
+        <p>Welcome to our mobile detailing business! We are Benjamin Breese and Aeden Berendes, and our story began right out of high school when we were both just 17. Fueled by a shared passion for cars and a commitment to excellence, we turned our dream into reality.
+
+          Our love for transforming cars from worn to wonderful inspired us to start our own detailing service. We recognized the need for high-quality, convenient detailing that fits into our customers' busy lives. That's why we bring our top-notch services directly to your door.
+          
+          Using only the best products and techniques, we ensure your vehicle looks its absolute best. Whether it's a full detail or a quick touch-up, we treat every job with the same level of care and dedication.
+          
+          Thank you for choosing us to care for your vehicle. We're excited to continue this journey and look forward to bringing our passion for detailing to your driveway.</p>
       </div>
       <div class="col-lg-4">
-        <p>This is bens stuff part 2.</p>
+        <p>Honesty, integrity, and hard work are at the heart of everything we do. We strive to exceed your expectations and ensure your complete satisfaction with every service.
+
+          Join us on this journey, and let us show you the difference that passion and precision can make. Your vehicle deserves the best, and we are here to deliver it.</p>
       </div>
       
     </div>
