--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <form action="//formspree.io/{{ site.email }}" method="POST" name="sentMessage" id="contactForm" novalidate>
+        <form action="{{ site.contactformurl }}" method="POST" target="_blank" name="sentMessage" id="contactForm" novalidate>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
@@ -20,14 +20,21 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="phone">Phone</label>
+              <input type="text" name="phone" class="form-control" placeholder="Phone" id="phone" required
+                data-validation-required-message="Please enter your phone number.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="email">Email Address</label>
-              <input type="email" name="_replyto" class="form-control" placeholder="Email Address" id="email" required
-                data-validation-required-message="Please enter your email address.">
+              <input type="email" name="email" class="form-control" placeholder="Email Address" id="email">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div>
-            <input type="hidden" name="_subject" value="New submission!">
+            <input type="hidden" name="subject" value="New submission!">
             <input type="text" name="_gotcha" style="display:none" />
           </div>
           <div class="row control-group">
