Changed socials, and changed services page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,13 @@
 
           Join us on this journey, and let us show you the difference that passion and precision can make. Your vehicle deserves the best, and we are here to deliver it.</p>
       </div>
-      
+      <div class="col-lg-4">
+        <p>Why Choose Us?
+          Convenience: We come to you, providing high-quality detailing services at your home or workplace.
+          Quality: We use the best products and techniques to ensure your vehicle looks its absolute best.
+          Passion: We are passionate about cars and dedicated to delivering meticulous care and attention to every detail.
+          Thank you for considering our services. We look forward to making your vehicle shine, inside and out!</p>
+      </div>
     </div>
   </div>
 </section>
