--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,12 +9,70 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Blah Blah Blah.</p>
+        <p>Welcome to our mobile detailing service, where we bring top-tier car care directly to your doorstep. Our services are designed to keep your vehicle looking its best, both inside and out. We use only the highest quality products and meticulous techniques to deliver exceptional results.
+
+          Exterior Detailing
+          Price: $150
+            
+          Our comprehensive exterior detailing service includes:
+            
+          Hand wash and dry
+          Wheel and tire cleaning
+          Clay bar treatment to remove contaminants
+          Wax application for a protective shine
+          Window and mirror cleaning
+          Trim and chrome polishing
+          
+            
+          </p>
       </div>
       <div class="col-lg-4">
-        <p>This is BNB Services part 2.</p>
+        <p>
+          TEST 222
+        </p>
       </div>
-      
+      <div class="col-lg-4">
+        <p>Interior Detailing
+                 </p>
+      </div>
+      <div class="col-lg-4">
+        <p>We offer professional interior detailing services to ensure your vehicle's interior is spotless and refreshed. Prices vary based on the size of your vehicle: 
+
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <p>Compact or Small Cars: $150
+          
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <p>
+          Medium and Large Cars: $200
+         
+
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <p>
+          Large SUVs or XL Large Cars: $225
+
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <p>Interior detailing includes:
+          
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <p>Thorough vacuuming of seats, carpets, and floor mats.
+          Cleaning and conditioning of all leather and vinyl surfaces.
+          Deep cleaning of fabric seats and upholstery.
+          Dashboard, console, and door panel cleaning.
+          Window and mirror cleaning.
+          Odor elimination.
+          
+        </p>
+      </div>
     </div>
   </div>
 </section>
