Got rid of old images and added an extra spot for pics. Also finished services page

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,29 +10,26 @@
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
         <p>Welcome to our mobile detailing service, where we bring top-tier car care directly to your doorstep. Our services are designed to keep your vehicle looking its best, both inside and out. We use only the highest quality products and meticulous techniques to deliver exceptional results.
-
-          Exterior Detailing
-          Price: $150
+          </p>
+          <p>Exterior Detailing:<br>
+          Price: $150</p>
             
-          Our comprehensive exterior detailing service includes:
-            
-          Hand wash and dry
-          Wheel and tire cleaning
-          Clay bar treatment to remove contaminants
-          Wax application for a protective shine
-          Window and mirror cleaning
-          Trim and chrome polishing
+          <p>Our comprehensive exterior detailing service includes:
+          </p> 
+          <p>Hand wash and dry.
+          Wheel and tire cleaning and protecting.
+          Clay bar treatment to remove contaminants.
+          Wax application for a protective shine.
+          Window and mirror cleaning.
+          </p>
           
             
           </p>
       </div>
+      
+      
       <div class="col-lg-4">
-        <p>
-          TEST 222
-        </p>
-      </div>
-      <div class="col-lg-4">
-        <p>Interior Detailing
+        <p>Interior Detailing:
                  </p>
       </div>
       <div class="col-lg-4">
@@ -64,12 +61,13 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <p>Thorough vacuuming of seats, carpets, and floor mats.
-          Cleaning and conditioning of all leather and vinyl surfaces.
+        <p>Thorough vacuuming and stain removing of seats, carpets, and floor mats.
+          Cleaning and conditioning of all leather, vinyl, and carpeted surfaces.
           Deep cleaning of fabric seats and upholstery.
           Dashboard, console, and door panel cleaning.
-          Window and mirror cleaning.
+          Window and rear veiw mirror cleaning.
           Odor elimination.
+          <p>Contact us for any questions or special orders! We are happy to help you choose the perfect package for you!</p>
           
         </p>
       </div>
