edited about page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-lg-4">
         <p>Why Choose Us?
-          Convenience: We come to you, providing high-quality detailing services at your home or workplace.
+          Convenience: We come to you, providing high-quality detailing services at your home.
           Quality: We use the best products and techniques to ensure your vehicle looks its absolute best.
           Passion: We are passionate about cars and dedicated to delivering meticulous care and attention to every detail.
           Thank you for considering our services. We look forward to making your vehicle shine, inside and out!</p>
