edited services page

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -51,7 +51,7 @@
       </div>
       <div class="col-lg-4">
         <p>
-          Large SUVs or XL Large Cars: $225
+          Large SUVs or XL Cars: $225
 
         </p>
       </div>
